@@ -1,3 +1,7 @@
+##
+# A set of gems for installation sourced from remote sources and local .gem
+# files
+
 class Gem::DependencyResolver::InstallerSet
 
   ##
